firefox-trunk (106.0~a1~hg20220825r628156-0ubuntu1) UNRELEASED; urgency=medium

  * Use MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=none instead of
    MACH_USE_SYSTEM_PYTHON=1
  * Bump build-dep on nodejs(-mozilla) >= 12.22.12
    - debian/control{,.in}

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Thu, 25 Aug 2022 09:55:04 +0200

firefox-trunk (105.0~a1~hg20220816r627253-0ubuntu1) kinetic; urgency=medium

  * Bump build-dep on nodejs(-mozilla) >= 12.22.1
    - debian/control{,.in}
  * Bump build-dep on rustc >= 1.61.0 and cargo >= 0.62
    - debian/control{,.in}

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 16 Aug 2022 11:06:28 +0200

firefox-trunk (104.0~a1~hg20220723r624975-0ubuntu1) kinetic; urgency=medium

  * Bump build-dep on nodejs(-mozilla) >= 12.22.1
    - debian/control{,.in}

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 28 Jun 2022 12:12:18 +0200

firefox-trunk (103.0~a1~hg20220626r622105-0ubuntu1) kinetic; urgency=medium

  * Update cbindgen to 0.24.3
    - debian/build/create-tarball.py

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 26 Jun 2022 10:20:20 +0200

firefox-trunk (102.0~a1~hg20220529r619126-0ubuntu1) kinetic; urgency=medium

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/rust-drop-dll-checksums.patch

  [ Dariusz Gadomski ]
  * Enable launching external file browser with AppArmor enabled (LP: #1931603)

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 29 May 2022 16:30:01 +0200

firefox-trunk (101.0~a1~hg20220501r615733-0ubuntu1) jammy; urgency=medium

  [ Rico Tzschichholz ]
  * Bump build-dep on rustc >= 1.59.0 and cargo >= 0.60
    - debian/control{,.in}
  * Update cbindgen to 0.23.0
    - debian/build/create-tarball.py
  * Bump dump_sys to c558ad1824b247e147dcc45ec105588883e379fb
    - debian/build/create-tarball.py

  [ Olivier Tilloy ]
  * Update patches
    - debian/patches/webrtc-armhf/upstream-D134738.diff

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 01 May 2022 12:39:21 +0200
