@@ -3,17 +3,19 @@
 
 --- a/modules/fdlibm/src/math_private.h
 +++ b/modules/fdlibm/src/math_private.h
-@@ -30,9 +30,15 @@
+@@ -30,9 +30,17 @@
   * Adapted from https://github.com/freebsd/freebsd-src/search?q=__double_t
   */
  
-+#if defined(__linux__) && defined(__i386__)
-+// rely on glibc's double_t
-+typedef long double __double_t;
-+typedef long double __float_t;
++#if defined __FLT_EVAL_METHOD__ && (__FLT_EVAL_METHOD__ == 2)
++typedef long double      __double_t;
++typedef long double      __float_t;
++#elif defined __FLT_EVAL_METHOD__ && (__GLIBC_FLT_EVAL_METHOD == 0 || __GLIBC_FLT_EVAL_METHOD == 16)
++typedef double      __double_t;
++typedef float       __float_t;
 +#else
  typedef double      __double_t;
-+typedef float       __float_t;
++typedef double      __float_t;
 +#endif
  typedef __double_t  double_t;
 -typedef float       __float_t;
