@@ -14,4 +14,4 @@ armhf-rustc-thin-lto.patch
 ppc64el-workaround-bug-1555531.patch
 armhf-clang-no-integrated-as-for-neon.patch
 armhf-do-not-build-qcms-with-neon.patch
-fix-i386-fdlibm.patch
+fix-fdlibm-ftbfs.patch
